Run MrChecker under ProductionLine (#150)
* Update pom.xml

* Update Jenkinsfile_node.groovy

* Update pom.xml

* Update Jenkinsfile_node.groovy

* Rename Jenkinsfile_node.groovy to Jenkinsfile_ProductionLine.groovy

* Rename Jenkinsfile_node.groovy to Jenkinsfile_ProductionLine.groovy